information_schema.test:   Added a comment line for a test case used for bug #12301. information_schema.result:   Fixed some test cases results (bug #12301). sql_show.cc:   Fixed bug #12301.   The bug was due to a missing value setting for the NUMERIC_SCALE column    in the get_schema_column_record() function (sql_show.cc).

sql/sql_show.cc:
  Fixed bug #12301.
  The bug was due to a missing value setting for the NUMERIC_SCALE column
   in the get_schema_column_record() function (sql_show.cc).
mysql-test/r/information_schema.result:
  Fixed some test cases results (bug #12301).
mysql-test/t/information_schema.test:
  Added a comment line for a test case used for bug #12301.